--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,14 @@ a {
 }
 
 .list {
+  padding: 0;
+  margin: 0;
   list-style: none;
+}
+
+.conteiner {
+  margin: 0 auto;
+  width: 1200px;
 }
 
 /*logo*/
@@ -72,7 +79,15 @@ a {
 }
 
 /*hero*/
+.hero {
+  margin-bottom: 107px;
+  text-align: center;
+  background-color: #2F303A;
+}
+
 .hero-title {
+  margin-top: 0;
+  margin-bottom: 30px;
   color: var(--primary-white-color);
   font-weight: 900;
   font-size: 44px;
@@ -83,36 +98,25 @@ a {
 }
 
 .hero-button {
+  display: inline-block;
+  border-radius: 4px;
+  padding: 10px 32px;
+  min-width: 200px;
+
   background-color: var(--secondary-accent-color);
   color: var(--primary-white-color);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  display: flex;
   align-items: center;
   text-align: center;
   letter-spacing: 0.06em;
 }
 
-/*преимущества*/
-.features .title {
-  color: var(--title-text-color);
-  font-weight: 700;
-  line-height: 1.4;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-}
-
-.features .text {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-}
-
-/*чем мы занимаемся & наша команда*/
-.job-title,
-.team-title{
+/*section*/
+.section-title {
+  margin-top: 0;
+  margin-bottom: 50px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 36px;
@@ -121,7 +125,44 @@ a {
   letter-spacing: 0.03em;
 }
 
+/*преимущества студии*/
+.features {
+  margin-bottom: 94px;
+}
+
+.features .title {
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+  font-weight: 700;
+  line-height: 1.4;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.features .text {
+  margin: 0;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+/*чем мы занимаемся*/
+.job {
+  margin-bottom: 94px;
+}
+
+/*наша команда*/
+.team {
+  padding-top: 94px;
+  padding-bottom: 94px;
+  background-color: #F5F4FA;
+}
+
 .team-list .title {
+  margin-top: 0;
+  margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
@@ -130,16 +171,31 @@ a {
   letter-spacing: 0.03em;
 }
 
+.team .img {
+  margin-bottom: 30px;
+}
+
 .team-list .text {
+  margin: 0;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
   letter-spacing: 0.03em;
-
 }
 
 /*footer*/
+footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #2F303A;
+}
+
+footer .logo {
+  display: inline-block;
+  margin-bottom: 20px;
+}
+
 .address {
   color: var(--primary-white-color);
   font-style: normal;
@@ -161,7 +217,20 @@ a {
 }
 
 /*portfolio*/
+.header-portfolio {
+  margin-bottom: 94px;
+}
+
+.projects {
+  margin-bottom: 94px;
+}
+
+.projects-button {
+  margin-bottom: 34px;
+}
+
 .projects-button .filter {
+  padding: 6px 22px;
   color: var(--title-text-color);
   font-family: Roboto, sans-serif;
   font-weight: 500;
@@ -178,6 +247,8 @@ a {
 }
 
 .projects-list .title {
+  margin-top: 0;
+  margin-bottom: 4px;
   color: var(--title-text-color);
   font-weight: 700;
   font-size: 18px;
@@ -185,7 +256,12 @@ a {
   letter-spacing: 0.06em;
 }
 
+.projects-list .img {
+  margin-bottom: 20px;
+}
+
 .projects-list .text {
+  margin: 0;
   color: var(--primary-text-color);
   font-weight: 400;
   font-size: 16px;
