--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,9 @@ a {
 
 .conteiner {
   margin: 0 auto;
-  width: 1200px;
+  width: 1230px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 /*logo*/
