--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ body {
   font-size: 14px;
 }
 
+/*утилиты*/
 a {
   text-decoration: none;
 }
@@ -50,8 +51,27 @@ a {
   color: var(--primary-white-color);
 }
 
+/*main nav*/
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
 /*site nav*/
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   color: var(--title-text-color);
   font-weight: 500;
   line-height: 1.14;
@@ -68,7 +88,19 @@ a {
 }
 
 /*contacts*/
+.site-contacts {
+  display: flex;
+  margin-left: auto;
+}
+
+.site-contacts .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .site-contacts .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--primary-text-color);
   font-weight: 500;
   line-height: 1.4;
@@ -129,7 +161,11 @@ a {
 
 /*преимущества студии*/
 .features {
+  display: flex;
   margin-bottom: 94px;
+}
+.features .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .features .title {
@@ -155,11 +191,27 @@ a {
   margin-bottom: 94px;
 }
 
+.job-list {
+  display: flex;
+}
+
+.job-list .item:not(:last-child) {
+  margin-right: 30px;
+}
+
 /*наша команда*/
 .team {
   padding-top: 94px;
   padding-bottom: 94px;
   background-color: #F5F4FA;
+}
+
+.team-list {
+  display: flex;
+}
+
+.team-list .item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .team-list .title {
@@ -234,7 +286,7 @@ footer .logo {
 .projects-button .filter {
   padding: 6px 22px;
   color: var(--title-text-color);
-  font-family: Roboto, sans-serif;
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
