--- a/css/style.css
+++ b/css/style.css
@@ -271,6 +271,10 @@ footer .logo {
 }
 
 /*portfolio*/
+.site-nav .link.current{
+  color: var(--accent-color);
+}
+
 .header-portfolio {
   margin-bottom: 94px;
 }
@@ -280,11 +284,14 @@ footer .logo {
 }
 
 .projects-button {
+  display: flex;
+  justify-content: center;
   margin-bottom: 34px;
 }
 
 .projects-button .filter {
   padding: 6px 22px;
+
   color: var(--title-text-color);
   font-family: inherit;
   font-weight: 500;
@@ -292,12 +299,37 @@ footer .logo {
   line-height: 1.63;
   text-align: center;
   letter-spacing: 0.03em;
+  border-radius: 4px;
+  border-style: inherit;
+}
+
+.projects-button .item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .projects-button .filter:hover,
 .projects-button .filter:focus{
   color: var(--primary-white-color);
   background-color: var(--accent-color);
+}
+
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects-list .item {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.projects-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.projects-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .projects-list .title {
